# ezconfig

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ezconfig/: __init__.py  settings_base.py  settings_pydantic.py  vault.py
tests/: test_pydantic.py  test_vault.py  utils.py
tests/configs/: testconfig.json  testconfig.yaml
